k8s/helm/ingress-shim.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: gcloud-issuer
  name: myingress
  namespace: cert-manager
spec:
  rules:
  - host: go.itgaiden.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-service
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - go.itgaiden.com
    secretName: myingress-cert # < cert-manager will store the created certificate in this secret.
